chore: remove validator from service and generate up-to-date swagger docs
