# pkg/server/docs/swagger.json
@@ -15,6 +15,35 @@
         "version": "1.0"
     },
     "paths": {
+        "/": {
+            "get": {
+                "description": "Get Info about the API.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AsmaulHusna"
+                ],
+                "summary": "Get Info about the API",
+                "responses": {
+                    "200": {
+                        "description": "Get Info success!",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIInfoResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/all": {
             "get": {
                 "description": "Get all Asma'ul Husna with optional query page and limit",
@@ -146,6 +175,25 @@
         }
     },
     "definitions": {
+        "entities.EndpointsInfo": {
+            "type": "object",
+            "required": [
+                "all",
+                "latin",
+                "urutan"
+            ],
+            "properties": {
+                "all": {
+                    "type": "string"
+                },
+                "latin": {
+                    "type": "string"
+                },
+                "urutan": {
+                    "type": "string"
+                }
+            }
+        },
         "models.APIErrorResponse": {
             "type": "object",
             "properties": {
@@ -154,6 +202,25 @@
                 },
                 "statusCode": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.APIInfoResponse": {
+            "type": "object",
+            "required": [
+                "author",
+                "endpoints",
+                "repository"
+            ],
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "endpoints": {
+                    "$ref": "#/definitions/entities.EndpointsInfo"
+                },
+                "repository": {
+                    "type": "string"
                 }
             }
         },
